--- a/wp-content/themes/malik/assets/css/main.css
+++ b/wp-content/themes/malik/assets/css/main.css
@@ -1725,7 +1725,8 @@ input:focus:-ms-input-placeholder {
   --clr-common-border-color: #51647c;
   --clr-common-bg-overlay: #ff9731;
   --clr-body-text-color: #777777;
-  --clr-body-heading-color: #263b5c;
+  /*--clr-body-heading-color: #263b5c;*/
+  --clr-body-heading-color: #000000;
   --clr-footer-1: #a2aec1;
   --clr-soft-black: #7e7e7e;
   --clr-soft-grey: #ebebeb;
@@ -1734,8 +1735,8 @@ input:focus:-ms-input-placeholder {
   --clr-soft-gray-bg: #f9f9f9;
   --clr-soft-grey-bg: #f6f6f6;
   --clr-soft-brand: #f9f5f2;
-  --clr-theme-1: #4ba766;
-  --clr-theme-2: #65c9bb;
+  --clr-theme-1: #f4b60b;
+  --clr-theme-2: #f3d06f;
   --clr-theme-3: #ff9a39;
   --clr-theme-4: #132642;
   --clr-theme-5: #2984ff;
@@ -2461,7 +2462,8 @@ input:focus:-ms-input-placeholder {
   height: 50px;
   display: inline-block;
   line-height: 50px;
-  background-color: #23344f;
+  /*background-color: #23344f;*/
+  background-color: #000000;
   text-align: center;
   font-size: 14px;
   color: #c0c0c0;
@@ -3724,7 +3726,8 @@ input.main-search-input:-ms-input-placeholder {
   border-radius: 30px;
   color: #fff;
   font-size: 16px;
-  background-color: #5fb35b;
+  /*background-color: #5fb35b;*/
+  background-color: #f4b60b;
 }
 .contact_btn:hover {
   background-color: var(--clr-theme-1);
@@ -3777,10 +3780,10 @@ input.main-search-input:-ms-input-placeholder {
   color: var(--clr-theme-2);
 }
 .single_contact_location:is(.theme-6) .icon {
-  color: var(--clr-theme-6);
+  color: var(--clr-theme-3);
 }
 .single_contact_location:is(.theme-6) .icon:hover {
-  background-color: var(--clr-theme-6);
+  background-color: var(--clr-theme-3);
   color: var(--clr-common-white);
 }
 .single_contact_location:is(.theme-6) .contact_address_title {
@@ -4410,7 +4413,8 @@ input.main-search-input:-ms-input-placeholder {
 }
 
 .about_champ_card {
-  background-color: #5fb35b;
+  /*background-color: #5fb35b;*/
+  background-color: #f4b60b;
   color: #fff;
   padding: 40px 25px;
   padding-bottom: 35px;
@@ -4617,7 +4621,8 @@ input.main-search-input:-ms-input-placeholder {
 */
 .sub_title {
   font-size: 18px;
-  color: #4ba766;
+  /*color: #4ba766;*/
+  color : #f4b60b;
   line-height: 2.2;
   font-weight: 400;
 }
@@ -9292,10 +9297,10 @@ h5.details_title {
   }
 }
 .progress_wrapper:is(.pbar_1) {
-  background-color: #5fb35b;
+  background-color: #f4b60b;
 }
 .progress_wrapper:is(.pbar_1) .progress_circle:after {
-  border-color: #6fbf6b;
+  border-color: #f3d06f;
 }
 .progress_wrapper:is(.pbar_2) {
   background-color: #4ba766;
